navBar.html: fix hamburger alignment issue for 720p screen

--- a/festcms/festflow/static/css/homepage.css
+++ b/festcms/festflow/static/css/homepage.css
@@ -4,7 +4,6 @@
     display: none; 
 }
 html, body {
-  overflow: hidden;
   height: 100vh;
 }
 
